--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-triumphs-of-perseverance-and-enterprise_69994
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69994-h/images/cover.jpg
 creator:
   author:
     agent_name: Cooper, Thomas
@@ -11,6 +14,8 @@ creator:
     gutenberg_agent_id: '34108'
     url: http://www.gutenberg.org/2009/agents/34108
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69994#The-triumphs-of-perseverance-and-enterprise
 gutenberg_issued: '2023-02-08'
 identifiers:
   gutenberg: '69994'
